--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 </head>
 
 <body>
-    <div class="container">
-        <!-- Navbar -->
-        <section id="navbar">
+    <!-- Navbar -->
+    <section id="navbar">
+        <div class="container">
             <div class="navtop">
                 <div>
-
                     <div>
                         <p>Questions? Need Help? Call us on (+123) 456 1500</p>
                     </div>
@@ -35,11 +34,11 @@
             </div>
             <div class="navbar">
                 <div>
-                    <div class="logo">BEST <span class="span">TOUR</span> PLAN
+                    <div class="logo">BEST <span style="color: #ec1f46;">TOUR</span> PLAN
                     </div>
                     <div class="search-bar">
                         <input type="text" name="" id="" placeholder="Search Location">
-                        <button type="submit" class="btn bg-secondary"><i class="fas fa-search"></i></button>
+                        <button type="submit" class="btn-search bg-secondary"><i class="fas fa-search"></i></button>
                     </div>
                     <div class="cart">
                         <i class="fas fa-shopping-cart"></i>
@@ -50,39 +49,95 @@
                     </div>
                 </div>
             </div>
-            <div class="navbottom bg-primary">
-                <div>
-                    <ul>
-                        <li><a href="#">ALL DEALS</a></li>
-                        <li><a href="#">HOTELS</a></li>
-                        <li><a href="#">ACTIVITIES</a></li>
-                        <li><a href="#">HOTEL DAY PACKAGES</a></li>
-                        <li><a href="#">RESTAURANTS</a></li>
-                        <li><a href="#">EVENTS</a></li>
-                        <li><a href="#">RODRIGUES</a></li>
-                    </ul>
-                </div>
+        </div>
+        <div class="navbottom bg-primary">
+            <div>
+                <ul>
+                    <li><a href="#">ALL DEALS</a></li>
+                    <li><a href="#">HOTELS</a></li>
+                    <li><a href="#">ACTIVITIES</a></li>
+                    <li><a href="#">HOTEL DAY PACKAGES</a></li>
+                    <li><a href="#">RESTAURANTS</a></li>
+                    <li><a href="#">EVENTS</a></li>
+                    <li><a href="#">RODRIGUES</a></li>
+                </ul>
             </div>
-        </section>
-
+        </div>
+    </section>
+    <!-- End Navbar -->
+    <div class="container">
         <!-- Bread Crump -->
         <div class="bread-crump">
             Home/ Flash Offers/ Grand Hilton Hotel
         </div>
-        <!-- Content -->
-        <section id="home-content">
-            <div class="hotel-name">
-                <p class="stars">
-                    <i class="fas fa-star" style="color: #F2994A;"></i>
-                    <i class="fas fa-star" style="color: #F2994A;"></i>
-                    <i class="fas fa-star" style="color: #F2994A;"></i>
-                    <i class="fas fa-star" style="color: #F2994A;"></i>
-                    <i class="fas fa-star" style="color: #F2994A;"></i>
-                </p>
-            </div>
-        </section>
     </div>
-    <!--container div closer  -->
+    <!-- End Bread Crump -->
+    <!-- Content -->
+    <section id="home-content">
+        <div class="container">
+            <div class="hotel-name">
+                <div class="hotel-name-area">
+                    <div style="grid-column: 1/2;">
+                        <p class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </p>
+                    </div>
+                    <div></div>
+                    <div class="hotel">
+                        <p >GRAND HILTON HOTEL<span class="flash-offer bg-secondary"> Flash Offer</span></p>
+                    </div>
+                    <div>
+                        
+                    </div>
+                    <div >
+                        <p>Half-Board/ All Inclusive + Complimentary Activities + Child Stays Free</p>
+                    </div>
+                    <div></div>
+                </div>
+                <div class="bg-secondary user-ratings">
+                    <p style="font-size: 8px;">User Ratings</p>
+                    <p style="font-size: 14px;">4.5/5</p>
+                </div>
+            </div>
+            <div class="home-content-a">
+                <div>
+                    <img src="img/view.jpg" alt="">
+                </div>
+                <div>
+                    <div class="booking bg-primary "">
+                        <div class=" booking-price float-left">
+                        <p style="font-size: 0.625rem;">price starts as</p>
+                        <p style="font-size: 1.5rem;">$ 8,500</p>
+                        <p style="font-size: 0.75rem;">per room / night</p>
+                        <p style="font-size: 1.125rem;">Quick Booking</p>
+                    </div>
+                    <div class="person-room">
+                        <p style="font-size: 0.75rem;"><i class="far fa-user"></i> 2 x Guests</p>
+                        <p style="font-size: 0.75rem;"><i class="fas fa-home"></i> 1 x Room</p>
+                        <p style="color:#0a223d;">.</p>
+                        <p style="font-size: 1.125rem;"><i class="fas fa-phone-volume"></i> 12100</p>
+                    </div>
+                    <div class="float-clear"></div>
+                    <div class=" py-2 ">
+                        <button type="submit" class="btn-booking bg-secondary">
+                            View Other Options
+                        </button>
+                    </div>
+
+                </div>
+                <div class="map">
+                    map
+                </div>
+            </div>
+
+        </div>
+        </div>
+        </div>
+    </section>
 </body>
 
 </html>
