--- a/index.html
+++ b/index.html
@@ -52,15 +52,17 @@
         </div>
         <div class="navbottom bg-primary">
             <div>
-                <ul>
-                    <li><a href="#">ALL DEALS</a></li>
-                    <li><a href="#">HOTELS</a></li>
-                    <li><a href="#">ACTIVITIES</a></li>
-                    <li><a href="#">HOTEL DAY PACKAGES</a></li>
-                    <li><a href="#">RESTAURANTS</a></li>
-                    <li><a href="#">EVENTS</a></li>
-                    <li><a href="#">RODRIGUES</a></li>
-                </ul>
+                <div class="container">
+                    <ul>
+                        <li><a href="#">ALL DEALS</a></li>
+                        <li><a href="#">HOTELS</a></li>
+                        <li><a href="#">ACTIVITIES</a></li>
+                        <li><a href="#">HOTEL DAY PACKAGES</a></li>
+                        <li><a href="#">RESTAURANTS</a></li>
+                        <li><a href="#">EVENTS</a></li>
+                        <li><a href="#">RODRIGUES</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
@@ -86,14 +88,15 @@
                             <i class="fas fa-star"></i>
                         </p>
                     </div>
-                    <div></div>
+                    <div>
+                    </div>
                     <div class="hotel">
-                        <p >GRAND HILTON HOTEL<span class="flash-offer bg-secondary"> Flash Offer</span></p>
+                        <p>GRAND HILTON HOTEL<span class="flash-offer bg-secondary"> Flash Offer</span></p>
                     </div>
                     <div>
-                        
+
                     </div>
-                    <div >
+                    <div>
                         <p>Half-Board/ All Inclusive + Complimentary Activities + Child Stays Free</p>
                     </div>
                     <div></div>
@@ -130,7 +133,6 @@
 
                 </div>
                 <div class="map">
-                    map
                 </div>
             </div>
 
@@ -138,6 +140,126 @@
         </div>
         </div>
     </section>
+    <!-- Hotel Info Menu -->
+    <section id="hotel-info">
+        <div class="container">
+            <div>
+                <ul>
+                    <li>Package Summery</li>
+                    <li>Hotel Information</li>
+                    <li>Rooms</li>
+                    <li>Facilities & Activities</li>
+                    <li>Dining & Entertainment</li>
+                    <li>Reviews </li>
+                    <li>Questions & Answers</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Package Summery</h2>
+            </div>
+            <div>
+                <div>
+                    <div class="bg-primary">
+                        <p>Package Highlights</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i>Half Board/ All Inclusive</li>
+                            <li><i class="fas fa-check-circle"></i>Luxurious 5-Star Hotel</li>
+                            <li><i class="fas fa-check-circle"></i>Child Under 11 Years Stay Free</li>
+                            <li><i class="fas fa-check-circle"></i>Banyan An Adult Only Zone</li>
+                            <li><i class="fas fa-check-circle"></i>LUX* Me Spa</li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <div class="bg-primary">
+                        <p>Offer Details</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i>Benefit from a special discounted CHILL’OUT OFFER at Grand Hilton Hotel.
+                            </li>
+                            <li>
+                                10th March - 30th April 2020
+                            </li>
+                        </ul>
+                        <p>* Valid until 30 April 2020</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="bg-primary">
+                    <p>Package Summery Details</p>
+                </div>
+                <div>
+                    <div>
+                        <p>Purchase Inclusions</p>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i>Room as per selection</li>
+                            <li><i class="fas fa-check-circle"></i>Half Board or All Inclusive Meal Plan</li>
+                            <li><i class="fas fa-check-circle"></i>Complimentary Land & Water activities</li>
+                            <li><i class="fas fa-check-circle"></i>Child Under 11 years old stays free</li>
+                            <li><i class="fas fa-check-circle"></i>Free Wi-Fi</li>
+                            <li><i class="fas fa-check-circle"></i>Free Secure Parking</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <p>Complimentary Land Based Activities</p>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i>Gym</li>
+                            <li><i class="fas fa-check-circle"></i>Beach Volley</li>
+                            <li><i class="fas fa-check-circle"></i>Table tennis</li>
+                            <li><i class="fas fa-check-circle"></i>Soccer balls</li>
+                            <li><i class="fas fa-check-circle"></i>Yoga</li>
+                            <li><i class="fas fa-check-circle"></i>Unlimited access to driving range</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <p>Complimentary Water Based Activities </p>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i>Water skiing</li>
+                            <li><i class="fas fa-check-circle"></i>Windsurfing</li>
+                            <li><i class="fas fa-check-circle"></i>Pedal boats </li>
+                            <li><i class="fas fa-check-circle"></i>Kayaking</li>
+                            <li><i class="fas fa-check-circle"></i>Aqua Gym</li>
+                            <li><i class="fas fa-check-circle"></i>Glass bottom boat trips</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <p>Meal Plan Available</p>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i>Half Board</li>
+                            <li><i class="fas fa-check-circle"></i>All Inclusive</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <p>Entertainment</p>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i>Live music</li>
+                            <li><i class="fas fa-check-circle"></i>DJ & Mauritian Dance Show</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <p>Check In & Check Out</p>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i>Check In Time 14:00</li>
+                            <li><i class="fas fa-check-circle"></i>Check Out Time 11:00</li>
+                        </ul>
+                    </div>
+                    
+
+                </div>
+            </div>
+            <!--container close  -->
+        </div>
+        <!--container close  -->
+    </section>
+    <script src="js/main.js"></script>
+    <!-- Google Maps -->
+    <script defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMhoJL0Ew1-df73jPRD9mp-L2pr5CKsto&callback=initMap">
+        </script>
 </body>
 
 </html>
