--- a/index.html
+++ b/index.html
@@ -143,21 +143,21 @@
     <!-- Hotel Info Menu -->
     <section id="hotel-info">
         <div class="container">
-            <div>
+            <div class="hotel-info-menu">
                 <ul>
-                    <li>Package Summery</li>
-                    <li>Hotel Information</li>
-                    <li>Rooms</li>
-                    <li>Facilities & Activities</li>
-                    <li>Dining & Entertainment</li>
-                    <li>Reviews </li>
-                    <li>Questions & Answers</li>
+                    <li class="current"><a href="#"> Package Summery</a></li>
+                    <li><a href="#">Hotel Information</a></li>
+                    <li><a href="#">Rooms</a></li>
+                    <li><a href="#">Facilities & Activities</a></li>
+                    <li><a href="#">Dining & Entertainment</a></li>
+                    <li><a href="#">Reviews</a></li>
+                    <li><a href="#">Questions & Answers</a></li>
                 </ul>
             </div>
-            <div>
+            <div class="py3">
                 <h2>Package Summery</h2>
             </div>
-            <div>
+            <div class="info-content">
                 <div>
                     <div class="bg-primary">
                         <p>Package Highlights</p>
@@ -190,7 +190,7 @@
             </div>
             <div>
                 <div class="bg-primary">
-                    <p>Package Summery Details</p>
+                    <p class="package-summery" >Package Summery Details</p>
                 </div>
                 <div>
                     <div>
