--- a/index.html
+++ b/index.html
@@ -154,102 +154,169 @@
                     <li><a href="#">Questions & Answers</a></li>
                 </ul>
             </div>
-            <div class="py3">
+            <div class="py2">
                 <h2>Package Summery</h2>
             </div>
             <div class="info-content">
                 <div>
-                    <div class="bg-primary">
+                    <div class="bg-primary small-title">
                         <p>Package Highlights</p>
                     </div>
                     <div>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i>Half Board/ All Inclusive</li>
-                            <li><i class="fas fa-check-circle"></i>Luxurious 5-Star Hotel</li>
-                            <li><i class="fas fa-check-circle"></i>Child Under 11 Years Stay Free</li>
-                            <li><i class="fas fa-check-circle"></i>Banyan An Adult Only Zone</li>
-                            <li><i class="fas fa-check-circle"></i>LUX* Me Spa</li>
+                        <ul class="package-card">
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Half Board/ All Inclusive</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Luxurious 5-Star Hotel</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Child Under 11 Years Stay Free</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Banyan An Adult Only Zone</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>LUX* Me Spa</p>
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <div>
-                    <div class="bg-primary">
+                    <div class="bg-primary small-title">
                         <p>Offer Details</p>
                     </div>
                     <div>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i>Benefit from a special discounted CHILL’OUT OFFER at Grand Hilton Hotel.
+                        <ul class="package-card">
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Benefit from a special discounted CHILL’OUT OFFER
+                                    at Grand Hilton Hotel.</p>
                             </li>
                             <li>
-                                10th March - 30th April 2020
+                                <p><i class="far fa-calendar"></i>
+                                    10th March - 30th April 2020</p>
                             </li>
+                            <p style="font-size: 12px;
+                            font-weight: 400;
+                            line-height: 15.06px;">* Valid until 30 April 2020</p>
                         </ul>
-                        <p>* Valid until 30 April 2020</p>
+
                     </div>
                 </div>
             </div>
             <div>
-                <div class="bg-primary">
-                    <p class="package-summery" >Package Summery Details</p>
+                <div class="small-title bg-primary">
+                    <p>Package Summery Details</p>
                 </div>
-                <div>
+                <div class="package-card-3x">
                     <div>
                         <p>Purchase Inclusions</p>
                         <ul>
-                            <li><i class="fas fa-check-circle"></i>Room as per selection</li>
-                            <li><i class="fas fa-check-circle"></i>Half Board or All Inclusive Meal Plan</li>
-                            <li><i class="fas fa-check-circle"></i>Complimentary Land & Water activities</li>
-                            <li><i class="fas fa-check-circle"></i>Child Under 11 years old stays free</li>
-                            <li><i class="fas fa-check-circle"></i>Free Wi-Fi</li>
-                            <li><i class="fas fa-check-circle"></i>Free Secure Parking</li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Room as per selection</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Half Board or All Inclusive Meal Plan</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Complimentary Land & Water activities</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Child Under 11 years old stays free</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Free Wi-Fi</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Free Secure Parking</p>
+                            </li>
                         </ul>
                     </div>
                     <div>
                         <p>Complimentary Land Based Activities</p>
                         <ul>
-                            <li><i class="fas fa-check-circle"></i>Gym</li>
-                            <li><i class="fas fa-check-circle"></i>Beach Volley</li>
-                            <li><i class="fas fa-check-circle"></i>Table tennis</li>
-                            <li><i class="fas fa-check-circle"></i>Soccer balls</li>
-                            <li><i class="fas fa-check-circle"></i>Yoga</li>
-                            <li><i class="fas fa-check-circle"></i>Unlimited access to driving range</li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Gym
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Beach Volley
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Table tennis
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Soccer balls
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Yoga
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Unlimited access to driving range
+                            </li>
                         </ul>
                     </div>
                     <div>
                         <p>Complimentary Water Based Activities </p>
                         <ul>
-                            <li><i class="fas fa-check-circle"></i>Water skiing</li>
-                            <li><i class="fas fa-check-circle"></i>Windsurfing</li>
-                            <li><i class="fas fa-check-circle"></i>Pedal boats </li>
-                            <li><i class="fas fa-check-circle"></i>Kayaking</li>
-                            <li><i class="fas fa-check-circle"></i>Aqua Gym</li>
-                            <li><i class="fas fa-check-circle"></i>Glass bottom boat trips</li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Water skiing</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Windsurfing</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Pedal boats </p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Kayaking</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Aqua Gym</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Glass bottom boat trips</p>
+                            </li>
                         </ul>
                     </div>
+                </div>
+                <div class="line"></div>
+                <div class="package-card-3x">
                     <div>
                         <p>Meal Plan Available</p>
                         <ul>
-                            <li><i class="fas fa-check-circle"></i>Half Board</li>
-                            <li><i class="fas fa-check-circle"></i>All Inclusive</li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Half Board</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>All Inclusive</p>
+                            </li>
                         </ul>
                     </div>
                     <div>
                         <p>Entertainment</p>
                         <ul>
-                            <li><i class="fas fa-check-circle"></i>Live music</li>
-                            <li><i class="fas fa-check-circle"></i>DJ & Mauritian Dance Show</li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Live music</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>DJ & Mauritian Dance Show</p>
+                            </li>
                         </ul>
                     </div>
                     <div>
                         <p>Check In & Check Out</p>
                         <ul>
-                            <li><i class="fas fa-check-circle"></i>Check In Time 14:00</li>
-                            <li><i class="fas fa-check-circle"></i>Check Out Time 11:00</li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Check In Time 14:00</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-check-circle"></i>Check Out Time 11:00</p>
+                            </li>
                         </ul>
                     </div>
-                    
-
                 </div>
+
+
             </div>
             <!--container close  -->
         </div>
