--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <div>
                 <div class="container">
                     <ul>
-                        <li><a href="#">ALL DEALS</a></li>
-                        <li><a href="#">HOTELS</a></li>
-                        <li><a href="#">ACTIVITIES</a></li>
-                        <li><a href="#">HOTEL DAY PACKAGES</a></li>
-                        <li><a href="#">RESTAURANTS</a></li>
-                        <li><a href="#">EVENTS</a></li>
-                        <li><a href="#">RODRIGUES</a></li>
+                        <li><a href="#"><p>ALL DEALS</p></a></li>
+                        <li><a href="#"><p>HOTELS</p></a></li>
+                        <li><a href="#"><p>ACTIVITIES</p></a></li>
+                        <li><a href="#"><p>HOTEL DAY PACKAGES</p></a></li>
+                        <li><a href="#"><p>RESTAURANTS</p></a></li>
+                        <li><a href="#"><p>EVENTS</p></a></li>
+                        <li><a href="#"><p>RODRIGUES</p></a></li>
                     </ul>
                 </div>
             </div>
