--- a/index.html
+++ b/index.html
@@ -17,18 +17,15 @@
     <section id="navbar">
         <div class="container">
             <div class="navtop">
-                <div>
+                <div class="navtop-left">
+                    <p>Questions? Need Help? Call us on (+123) 456 1500</p>
+                </div>
+                <div class="navtop-right">
                     <div>
-                        <p>Questions? Need Help? Call us on (+123) 456 1500</p>
+                        <p><i class="fas fa-gift"></i> BTP Gift Card</p>
                     </div>
                     <div>
-
-                    </div>
-                    <div>
-                        <ul>
-                            <li><i class="fas fa-gift"></i> BTP Gift Card</li>
-                            <li><i class="far fa-star"></i>Loyalty Program</li>
-                        </ul>
+                        <p><i class="far fa-star"></i>Loyalty Program</p>
                     </div>
                 </div>
             </div>
@@ -54,13 +51,27 @@
             <div>
                 <div class="container">
                     <ul>
-                        <li><a href="#"><p>ALL DEALS</p></a></li>
-                        <li><a href="#"><p>HOTELS</p></a></li>
-                        <li><a href="#"><p>ACTIVITIES</p></a></li>
-                        <li><a href="#"><p>HOTEL DAY PACKAGES</p></a></li>
-                        <li><a href="#"><p>RESTAURANTS</p></a></li>
-                        <li><a href="#"><p>EVENTS</p></a></li>
-                        <li><a href="#"><p>RODRIGUES</p></a></li>
+                        <li><a href="#">
+                                <p>ALL DEALS</p>
+                            </a></li>
+                        <li><a href="#">
+                                <p>HOTELS</p>
+                            </a></li>
+                        <li><a href="#">
+                                <p>ACTIVITIES</p>
+                            </a></li>
+                        <li><a href="#">
+                                <p>HOTEL DAY PACKAGES</p>
+                            </a></li>
+                        <li><a href="#">
+                                <p>RESTAURANTS</p>
+                            </a></li>
+                        <li><a href="#">
+                                <p>EVENTS</p>
+                            </a></li>
+                        <li><a href="#">
+                                <p>RODRIGUES</p>
+                            </a></li>
                     </ul>
                 </div>
             </div>
