--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
             <div class="py2">
                 <h2>Package Summery</h2>
             </div>
+            <!-- info content part1 start -->
             <div class="info-content">
                 <div>
                     <div class="bg-primary small-title">
@@ -215,6 +216,8 @@
                     </div>
                 </div>
             </div>
+            <!-- info content part1 end -->
+            <!-- info content part2 start -->
             <div>
                 <div class="small-title bg-primary">
                     <p>Package Summery Details</p>
@@ -326,12 +329,167 @@
                         </ul>
                     </div>
                 </div>
-
-
             </div>
-            <!--container close  -->
+            <!-- info content part2 end -->
+            <!-- info content part3 start -->
+            <div class="guest-review">
+                <div>
+                    <h1>OTHER PACKAGES</h1>
+                </div>
+                <div class="other-packages">
+                    <div class="packages-type-1">
+                        <div>
+                            <p class="flash-offer-2 bg-secondary">Flash Offer</p>
+                        </div>
+                        <div class="bg-primary">
+                            <span class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </span>
+                            <h3>Hotel Blue Haven</h3>
+                            <p class="text">Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur enim
+                                laborum magna llit. Ipsum est fugiat velit ea llamco do esse ut in veniam sun in
+                                onsequat. Aute quis duis epteur excepteur ipsum occaecat eiusmod nsectetur enim laborum
+                                magna mollit. Ipsum est fugiat velit ea ullamco do </p>
+                            <ul>
+                                <li>
+                                    <p><i class="fas fa-map-marker-alt"></i>1749 Wheeler Ridge Delaware</p>
+                                </li>
+                                <li>
+                                    <p><i class="far fa-user"></i>2 x Guests</p>
+                                </li>
+                                <li>
+                                    <p><i class="fas fa-home"></i>1 x Room</p>
+                                </li>
+                            </ul>
+                            <p><s>$ 10,500</s></p>
+                            <div class="flex">
+                                <p class="price">$8,500</p>
+                                <p class="book-now bg-secondary">Book Now</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="packages-type-2">
+                        <div class="packages-image">
+                            <p class="flash-offer-3 bg-secondary">
+                                Flash Offer
+                            </p>
+                        </div>
+                        <div class="bg-primary">
+                            <h3>
+                                LUX* Belle Mare
+                            </h3>
+                            <ul>
+                                <li>
+                                    <p><i class="fas fa-map-marker-alt"></i>1749 Wheeler Ridge Delaware</p>
+                                </li>
+                                <li>
+                                    <p><i class="far fa-user"></i>2 x Guests</p>
+                                </li>
+                                <li>
+                                    <p><i class="fas fa-home"></i>1 x Room</p>
+                                </li>
+                            </ul>
+                            <p><s>$ 10,500</s></p>
+                            <div class="flex">
+                                <p class="price">$3,000</p>
+                                <p class="book-now bg-secondary">Book Now</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="packages-type-2">
+                        <div class="packages-image">
+                            <p class="flash-offer-3 bg-secondary">
+                                Flash Offer
+                            </p>
+                        </div>
+                        <div class="bg-primary">
+                            <h3>
+                                LUX* Belle Mare
+                            </h3>
+                            <ul>
+                                <li>
+                                    <p><i class="fas fa-map-marker-alt"></i>1749 Wheeler Ridge Delaware</p>
+                                </li>
+                                <li>
+                                    <p><i class="far fa-user"></i>2 x Guests</p>
+                                </li>
+                                <li>
+                                    <p><i class="fas fa-home"></i>1 x Room</p>
+                                </li>
+                            </ul>
+                            <p><s>$ 10,500</s></p>
+                            <div class="flex">
+                                <p class="price">$3,000</p>
+                                <p class="book-now bg-secondary">Book Now</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="packages-type-2">
+                        <div class="packages-image">
+                            <p class="flash-offer-3 bg-secondary">
+                                Flash Offer
+                            </p>
+                        </div>
+                        <div class="bg-primary">
+                            <h3>
+                                LUX* Belle Mare
+                            </h3>
+                            <ul>
+                                <li>
+                                    <p><i class="fas fa-map-marker-alt"></i>1749 Wheeler Ridge Delaware</p>
+                                </li>
+                                <li>
+                                    <p><i class="far fa-user"></i>2 x Guests</p>
+                                </li>
+                                <li>
+                                    <p><i class="fas fa-home"></i>1 x Room</p>
+                                </li>
+                            </ul>
+                            <p><s>$ 10,500</s></p>
+                            <div class="flex">
+                                <p class="price">$3,000</p>
+                                <p class="book-now bg-secondary">Book Now</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="packages-type-2">
+                        <div class="packages-image">
+                            <p class="flash-offer-3 bg-secondary">
+                                Flash Offer
+                            </p>
+                        </div>
+                        <div class="bg-primary">
+                            <h3>
+                                LUX* Belle Mare
+                            </h3>
+                            <ul>
+                                <li>
+                                    <p><i class="fas fa-map-marker-alt"></i>1749 Wheeler Ridge Delaware</p>
+                                </li>
+                                <li>
+                                    <p><i class="far fa-user"></i>2 x Guests</p>
+                                </li>
+                                <li>
+                                    <p><i class="fas fa-home"></i>1 x Room</p>
+                                </li>
+                            </ul>
+                            <p><s>$ 10,500</s></p>
+                            <div class="flex">
+                                <p class="price">$3,000</p>
+                                <p class="book-now bg-secondary">Book Now</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
-        <!--container close  -->
+        <!--container div end  -->
     </section>
     <script src="js/main.js"></script>
     <!-- Google Maps -->
