--- a/index.html
+++ b/index.html
@@ -491,6 +491,71 @@
         </div>
         <!--container div end  -->
     </section>
+
+    <section id="bottom">
+        <div class="newsletter">
+            <div class="flex z-index1">
+                <div>
+                    <p class="subs">subscribe to our</p>
+                    <h2 class="news-title">Newsletter</h2>
+                </div>
+                <div>
+                    <div class="search-bar">
+                        <input type="text" name="" id="" placeholder="Search Location">
+                        <button type="submit" class="btn-search bg-secondary"><i class="fas fa-search"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Other Activities -->
+        <div id="other-activities">
+            <div class="container">
+                <div class="other-title">
+                    <h1>Other Activities</h1>
+                </div>
+                <div class="activities-grid">
+                <div class="other-activities">
+                    <p class="p-content">Tamarind falls hiking
+                        trip - full day
+
+                    </p>
+                    <p class="book-now bg-secondary">
+                        Book Now
+                    </p>
+                </div>
+                <div class="other-activities-2 ">
+                    <p class="p-content">Tamarind falls hiking
+                        trip - full day
+
+                    </p>
+                    <p class="book-now bg-secondary">
+                        Book Now
+                    </p>
+                </div>
+                <div class="other-activities ">
+                    <p class="p-content">Tamarind falls hiking
+                        trip - full day
+
+                    </p>
+                    <p class="book-now bg-secondary">
+                        Book Now
+                    </p>
+                </div>
+                <div class="other-activities-2 ">
+                    <p class="p-content">Tamarind falls hiking
+                        trip - full day
+
+                    </p>
+                    <p class="book-now bg-secondary">
+                        Book Now
+                    </p>
+                </div>
+            </div>
+
+            </div>
+        </div>
+    </section>
     <script src="js/main.js"></script>
     <!-- Google Maps -->
     <script defer
